fixed pre tag wrap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6680,25 +6680,11 @@ a:active {
     .blog-post .post-content .content h1 {
       padding: 20px 0; }
     .blog-post .post-content .content pre {
-      font-size: 1.3em;
-      padding: 0 50px;
-      white-space: pre-wrap;
-      white-space: -moz-pre-wrap !important;
-      white-space: -pre-wrap;
-      white-space: -o-pre-wrap;
-      overflow-x: scroll; }
-      .blog-post .post-content .content pre .hljs {
-        display: inline-block;
-        overflow-x: scroll;
-        padding: 0.5em;
-        padding-right: 100%;
-        background: #002b36;
-        color: #839496;
-        -webkit-text-size-adjust: none;
-        width: 2000px; }
+      font-size: 1.3em; }
       .blog-post .post-content .content pre code {
-        overflow-x: scroll; }
-        .blog-post .post-content .content pre code .hljs-tag {
-          font-size: 1.3em; } }
+        font-size: inherit;
+        white-space: pre;
+        overflow-x: scroll;
+        overflow-y: scroll; } }
 
 /*# sourceMappingURL=app.css.map */
